Arrumando card de notas

--- a/app/src/main/res/layout/item_grade.xml
+++ b/app/src/main/res/layout/item_grade.xml
@@ -4,8 +4,9 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="12dp">
+    android:layout_margin="16dp"
+    app:cardBackgroundColor="@color/holo_blue_dark"
+    app:cardCornerRadius="16dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,57 +18,82 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Nome da Disciplina"
-            android:textStyle="bold"
-            android:textColor="#FFFFFF"
-            android:textSize="18sp"
-            android:paddingStart="8dp"
-            android:paddingBottom="8dp"/>
+            android:textColor="@color/holo_blue_darker"
+            android:textSize="22sp"
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewSubject"
             android:orientation="vertical"
-            android:paddingStart="8dp">
+            android:paddingTop="12dp">
 
             <TextView
                 android:id="@+id/textViewProfessor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Professor:"
-                android:textColor="#FFFFFF"
-                android:textSize="16sp"
+                android:text="Professor: John Doe"
+                android:textColor="@color/white"
+                android:textSize="18sp"
                 android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/textViewAbsence"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Faltas:"
-                android:textColor="#FFFFFF"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:layout_marginTop="4dp"/>
+                android:text="Faltas: 3"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:layout_marginTop="8dp"
+                android:textStyle="bold"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="16dp">
+
+                <TextView
+                    android:id="@+id/textViewGradeN1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Nota 1: 8.5"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/textViewGradeN2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Nota 2: 7.0"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/textViewGrade"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Nota:"
-                android:textColor="#FFFFFF"
-                android:textSize="16sp"
+                android:text="Nota Final: 7.8"
+                android:textColor="@color/white"
+                android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_marginTop="4dp"/>
+                android:layout_marginTop="16dp"/>
 
             <TextView
                 android:id="@+id/textViewSituation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Situação:"
-                android:textColor="#FFFFFF"
-                android:textSize="16sp"
+                android:text="Aprovado"
+                android:textColor="@color/white"
+                android:textSize="18sp"
                 android:textStyle="bold"
-                android:layout_marginTop="4dp"/>
+                android:layout_marginTop="8dp"/>
         </LinearLayout>
 
     </RelativeLayout>
