--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,9 @@
     <color name="colorButtonEdit">#4287f5</color>
     <color name="colorButtonInfo">#a400e0</color>
     <color name="holo_blue_dark">#ff33b5e5</color>
+    <color name="holo_blue_darker">#0d6282</color>
     <color name="holo_green_dark">#ff669900</color>
+    <color name="holo_green">#42f56f</color>
     <color name="holo_orange_dark">#ffff8800</color>
     <color name="holo_red_dark">#ffcc0000</color>
     <color name="holo_purple_dark">#ff9933cc</color>
