--- a/app/src/main/res/layout/item_grade.xml
+++ b/app/src/main/res/layout/item_grade.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
-    app:cardBackgroundColor="@color/holo_blue_dark"
+    app:cardBackgroundColor="@color/pink"
     app:cardCornerRadius="16dp">
 
     <RelativeLayout
@@ -18,7 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Nome da Disciplina"
-            android:textColor="@color/holo_blue_darker"
+            android:gravity="center"
+            android:textColor="@color/white"
             android:textSize="22sp"
             android:textStyle="bold"/>
 
