--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="transparent">#00FFFFFF</color>
     <color name="colorButtonSave">#42f56f</color>
     <color name="background_dark">#2e282b</color>
-    <color name="colorButtonDelete">#eb3434</color>
+    <color name="colorButtonDelete">#940000</color>
     <color name="colorButtonEdit">#4287f5</color>
     <color name="colorButtonInfo">#a400e0</color>
     <color name="holo_blue_dark">#ff33b5e5</color>
