--- a/app/src/main/res/layout/item_ranking.xml
+++ b/app/src/main/res/layout/item_ranking.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="16dp"
+    android:gravity="center_vertical">
 
     <TextView
         android:id="@+id/positionTextView"
@@ -13,7 +14,7 @@
         android:text="1"
         android:textStyle="bold"
         android:textColor="@color/pink"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:gravity="center"/>
 
     <TextView
@@ -22,7 +23,10 @@
         android:layout_height="wrap_content"
         android:layout_weight="3"
         android:text="Nome do Aluno"
-        android:textSize="16sp" />
+        android:textSize="20sp"
+        android:textColor="@android:color/black"
+        android:paddingStart="8dp"
+        android:gravity="center_vertical"/>
 
     <TextView
         android:id="@+id/gradeTextView"
@@ -30,7 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Nota"
-        android:textSize="16sp"
-        android:gravity="center"/>
+        android:textSize="20sp"
+        android:gravity="center"
+        android:textColor="@android:color/black"/>
 
 </LinearLayout>
