--- a/app/src/main/res/menu/professor_bottom_menu.xml
+++ b/app/src/main/res/menu/professor_bottom_menu.xml
@@ -17,6 +17,11 @@
         android:icon="@drawable/book_24"/>
 
     <item
+        android:id="@+id/professor_attendance"
+        android:title="Chamada"
+        android:icon="@drawable/sharp_calendar_24"/>
+
+    <item
         android:id="@+id/professor_profile"
         android:title="Perfil"
         android:icon="@drawable/user_24"/>
