--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,7 @@
     <color name="holo_red_dark">#ffcc0000</color>
     <color name="holo_purple_dark">#ff9933cc</color>
     <color name="holo_yellow_dark">#ffffbb33</color>
+    <color name="gold">#FFD700</color>
+    <color name="silver">#C0C0C0</color>
+    <color name="bronze">#CD7F32</color>
 </resources>
