--- a/app/src/main/res/layout/activity_coordinator_coordinators.xml
+++ b/app/src/main/res/layout/activity_coordinator_coordinators.xml
@@ -28,8 +28,6 @@
         android:layout_height="wrap_content"
         android:text="Adicionar Coordenador"
         android:drawableLeft="@drawable/add_24"
-        android:padding="12dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:textColor="?android:attr/textColorPrimary" />
+        android:padding="12dp"/>
 
 </LinearLayout>
