--- a/app/src/main/res/layout/activity_coordinator_course.xml
+++ b/app/src/main/res/layout/activity_coordinator_course.xml
@@ -28,8 +28,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Adicionar Curso"
-        android:drawableLeft="@drawable/add_24"
-        android:padding="12dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:textColor="?android:attr/textColorPrimary" />
+        android:drawableLeft="@drawable/add_24"/>
 </LinearLayout>
