--- a/app/src/main/res/layout/activity_coordinator_subjects.xml
+++ b/app/src/main/res/layout/activity_coordinator_subjects.xml
@@ -29,8 +29,6 @@
         android:layout_height="wrap_content"
         android:text="Adicionar Matéria"
         android:drawableLeft="@drawable/add_24"
-        android:padding="12dp"
-        android:background="?android:attr/selectableItemBackground"
-        android:textColor="?android:attr/textColorPrimary" />
+        android:padding="12dp"/>
 
 </LinearLayout>
